--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ retrying==1.3.3
 six==1.10.0
 sortedcontainers==2.1.0
 traitlets==4.3.2
-urllib3==1.24.1
+urllib3>=1.24.2
 websocket-client==0.40.0
 Werkzeug==0.15.2
 zope.interface==4.6.0
